# xterm-color-comparison

./: .envrc  16-colors.json  LICENSE  color_comparison.py  get-tailwind-colors.mts  pyproject.toml  tailwind-colors.json
