[project]
name = "xterm-color-comparison"
version = "0.1.0"
description = ""
authors = [{ name = "PratikBhusal", email = "PratikBhusal@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colour-science>=0.4.6",
    "matplotlib>=3.10.9",
    "numpy>=2.3.4",
    "pipe>=2.2",
    "scipy>=1.17.1",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "mypy>=1.18.2",
    "pynvim>=0.6.0",
    "ruff>=0.15.13",
]


[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
disallow_any_expr = false
